# sesh

./: Cargo.toml  README.md
sesh/: Cargo.toml
sesh-cli/: Cargo.toml
sesh-cli/src/: main.rs
sesh/src/: json.rs  lib.rs  zip.rs
