[package]
name = "sesh"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
time = { version = "0.3.36", features = ["serde-human-readable"] }
zip = { version = "2.2.0", optional = true }

[features]
default = ["zip"]
zip = ["dep:zip"]
